# fitmentor

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ROADMAP.md
backend/: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_users_fitness_profiles.py
backend/src/fitmentor/: config.py  dependencies.py  main.py
backend/src/fitmentor/db/: models.py  session.py
backend/src/fitmentor/middleware/: auth.py
docs/superpowers/specs/: 2026-04-16-phase3-profile-service-design.md
